Aligning Menu, adding documentation, bumping an issue with security implications

--- a/ui/src/components/Menu/Menu.css
+++ b/ui/src/components/Menu/Menu.css
@@ -2,3 +2,8 @@
   padding-top: 30px;
   padding-bottom: 200px;
 }
+
+.logo {
+  position: absolute;
+  left: 0;
+}
